# snappi-ixnetwork

./: .gitignore  .travis.yml  CONTRIB.md  DESIGN_FEATURE_GAP.md  MANIFEST.in  README.md  contribute.md  contributing.md  do.py  index.html  pyproject.toml  readme.md  requirements.txt  setup.py  version.py
.github/: copilot-instructions.md
data/: behaviors.csv  behaviors.json  categories.csv  categories.json  packages.json  suites.csv  suites.json  timeline.json
docs/: SONIC_SRV6_DATAPLANE_PERF_DESIGN.md  SRV6_SNAPPI_CONVERSION_PLAN.md  compactor.md  isis_srv6_design.md
export/: influxDbData.txt  prometheusData.txt
history/: categories-trend.json  duration-trend.json  history-trend.json  history.json  retry-trend.json
ixnetwork_open_traffic_generator/: __init__.py  customfield.py  ixnetworkapi.py  lag.py  ngpf.py  trafficitem.py  validation.py  vport.py
scripts/: ixncfg_to_json.py  setup-env.sh
snappi_ixnetwork/: __init__.py  bgp.py  capture.py  compactor.py  configcreation.py  configurebgp.py  convergenceapi.py  createixnconfig.py  customfield.py  deviceCompactor.py  ethernet.py  events.py  exceptions.py  flowutils.py  ixnetworkapi.py  ixnetworkconfig.py  lag.py  logger.py  ngpf.py  ngpf_old.py  objectdb.py  ping.py  protocolmetrics.py  resourcegroup.py  serdes.py  snappi_api.py  snappi_convergence.py  snappi_convergence_api.py  timer.py  trafficitem.py  validation.py  vport.py  vport_new.py
tests/: conftest.py  pytest.ini  sample_sonic_test_structure.py  settings.json  settings_arista.json  settings_cisco.json  test_bgp_speaker.py  test_capture.py  test_compact.py  (+59 more)
(+52821 files in other folders)
